--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
 host_key_checking = false
-inventory = /home/ansible/inventory 
+inventory = ./inventory
 sudo_user = root
 become_user = root
 deprecation_warnings = False
 retry_files_enabled = False
+scp_if_ssh=True
