--- a/roles/deploy_nginx_balancer/tasks/main.yml
+++ b/roles/deploy_nginx_balancer/tasks/main.yml
@@ -1,22 +1,32 @@
----
-#tasks file for deploy_nginx_balancer
+--- 
+- name: Docker installation
+  - name: Update repository
+      shell: yum update -y
+  - name: Install yum-utils
+      yum:
+        name: yum-utils
+        state: latest
+  - name: Install device-mapper
+      yum:
+        name: device-mapper-persistent-data
+        state: latest
+  - name: Install lvm2
+      yum:
+        name: lvm2
+        state: latest
+  - name: Add repository      
+      shell: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+  - name: Install docker-ce
+      yum: 
+        name: docker-ce  
+        state: latest
+  shell: systemctl start docker; sudo systemctl enable docker
+  service: state=started enabled=yes
 
-#tasks file for deploy_web_app
-tasks:
- - name: Docker installation
-   shell: yum update -y
-   yum: name=yum-utils state=latest
-   yum: name=device-mapper-persistent-data state=latest
-   yum: name=lvm2 state=latest
-   shell: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-   yum: name=docker-ce  state=latest
-   shell: systemctl start docker; sudo systemctl enable docker
-   service: state=started enabled=yes
-
- - name: Pull Nginx image 
-   shell: docker pull nginx
+- name: Pull app image from DockerHub
+  shell: docker pull nginx 
   
- - name: Run Nginx
+- name: Run Nginx
    shell: docker run -d --name nginx -p 80:80 nginx
     
-# - name: Generate config file Nginx from Jinja2  
+#- name: Generate config file Nginx from Jinja2  
