--- a/roles/deploy_nginx_balancer/tasks/main.yml
+++ b/roles/deploy_nginx_balancer/tasks/main.yml
@@ -45,7 +45,8 @@
     name: nginx
 
 - name: Run app container
-  docker:
+  docker_container:
+    name: nginx      
     detach: yes
     ports: 80:80
     #tty: yes
