--- a/roles/deploy_web_app/tasks/main.yml
+++ b/roles/deploy_web_app/tasks/main.yml
@@ -58,6 +58,7 @@
   docker_container:
     name: "{{ item.name }}"          
     detach: yes
+    links: nginx:nginx
     ports: "{{ item.ports }}" 
     #tty: yes
     #interactive: yes
