--- a/roles/deploy_nginx_balancer/templates/nginx.conf
+++ b/roles/deploy_nginx_balancer/templates/nginx.conf
@@ -8,16 +8,16 @@ events {
 }
 http {
 
-upstream app {
-    server 192.168.10.10; 
-    server 192.168.10.20;
-    server 192.168.10.30;
+upstream app_app_servers {
+    app1:5000; 
+    app2:5000;
+    app3:5000;
 }
 server {
-  location / {
-    proxy_pass  ;
-  }
+   listen 80;
+   location localhost 
 }
+
        sendfile on;
        tcp_nopush on;
        tcp_nodelay on;
