--- a/roles/deploy_nginx_balancer/templates/nginx.conf
+++ b/roles/deploy_nginx_balancer/templates/nginx.conf
@@ -15,9 +15,10 @@ upstream app_servers {
 }
 server {
    listen 80;
-   location localhost 
+   location /{
+   proxy_pass http://localhost; 
+ } 
 }
-
        sendfile on;
        tcp_nopush on;
        tcp_nodelay on;
