--- a/roles/deploy_nginx_balancer/templates/nginx.conf
+++ b/roles/deploy_nginx_balancer/templates/nginx.conf
@@ -9,14 +9,14 @@ events {
 http {
 
 upstream app_servers {
-    app1:5000; 
-    app2:5000;
-    app3:5000;
+    server app1:5551; 
+    server app2:5552;
+    server app3:5553;
 }
 server {
-   listen 80;
-   location / {
-   proxy_pass http://localhost; 
+    listen 80;
+    location / {
+    proxy_pass http://localhost; 
  } 
 }
        sendfile on;
