--- a/roles/deploy_nginx_balancer/templates/nginx.conf
+++ b/roles/deploy_nginx_balancer/templates/nginx.conf
@@ -1,45 +1,20 @@
-user {{ nginx_user: }};
-worker_processes {{ worker_processes }};
-pid /run/nginx.pid;
+user www-data;
+worker_processes 1;
+
 events {
-
-        worker_connections {{ worker_connections }} ;
-
+    worker_connections 1024;
 }
 http {
-
-upstream app_servers {
-    server app1:5551; 
-    server app2:5552;
-    server app3:5553;
-}
+upstream localhost{
+    server app1:5000; 
+    server app2:5000;
+    server app3:5000;
+	}
 server {
     listen 80;
     location / {
     proxy_pass http://localhost; 
  } 
 }
-       sendfile on;
-       tcp_nopush on;
-       tcp_nodelay on;
-       keepalive_timeout 65;
-       types_hash_max_size 2048;
 
-       include /etc/nginx/mime.types;
-       default_type application/octet-stream;
-
-       ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-       ssl_prefer_server_ciphers on;
-
-       access_log /var/log/nginx/access.log;
-       error_log /var/log/nginx/error.log;
-
-       log_format proxy  '[$time_local] $remote_addr - $server_name to: '
-	      '$upstream_addr: $request upstream_response_time '
-	      '$upstream_response_time msec $msec request_time $request_time';
-
-       gzip on;
-       gzip_disable "msie6";
-
-       include /etc/nginx/conf.d/*.conf;
 }
