--- a/roles/deploy_nginx_balancer/templates/nginx.conf
+++ b/roles/deploy_nginx_balancer/templates/nginx.conf
@@ -6,9 +6,10 @@ events {
         worker_connections {{ worker_connections }} ;
 
 }
+
 http {
 
-upstream app_servers {
+upstream localhost {
     server app1:5551; 
     server app2:5552;
     server app3:5553;
@@ -19,6 +20,7 @@ server {
     proxy_pass http://localhost; 
  } 
 }
+
        sendfile on;
        tcp_nopush on;
        tcp_nodelay on;
