--- a/roles/create_network/tasks/main.yml
+++ b/roles/create_network/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: Create a network
   docker_network:
     name: network_one
-    connected:
-             - app1
-             - app2
-             - app3
-             - nginx  
+    #    connected:
+    #         - app1
+    #         - app2
+    #         - app3
+    #         - nginx  
