--- a/roles/deploy_nginx_balancer/tasks/main.yml
+++ b/roles/deploy_nginx_balancer/tasks/main.yml
@@ -9,8 +9,7 @@
   docker_container:
     name: nginx      
     detach: yes
-    volume:
-    /home/nginx:/etc/nginx
+    volume: /home/nginx:/etc/nginx
     networks:
     - name: network_one            
     ports: 80:80
