--- a/roles/deploy_nginx_balancer/tasks/main.yml
+++ b/roles/deploy_nginx_balancer/tasks/main.yml
@@ -23,4 +23,4 @@
   template: src=nginx.conf.j2 dest=/home/nginx/nginx.conf
 
 - name: CP   
-  command: docker cp /home/nginx/nginx.conf nginx:/etc/nginx/nginc.conf
+  command: docker cp /home/nginx/nginx.conf nginx:/etc/nginx/nginx.conf
